--- a/PlanIt/package.json
+++ b/PlanIt/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:local": "set VITE_LOCAL=true && vite",
+    "dev:local:mac": "export VITE_LOCAL=true && vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -15,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "redux": "^5.0.1",
     "sass": "^1.77.8"
   },
   "devDependencies": {
