--- a/PlanIt/package.json
+++ b/PlanIt/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.7.4",
     "react": "^18.3.1",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
