--- a/PlanIt/package.json
+++ b/PlanIt/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
+    "google-map-react": "^2.2.1",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
