--- a/PlanIt/package.json
+++ b/PlanIt/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.4",
     "google-map-react": "^2.2.1",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
