--- a/PlanIt/package.json
+++ b/PlanIt/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.26.23",
     "axios": "^1.7.4",
     "google-map-react": "^2.2.1",
     "react": "^18.3.1",
