--- a/PlanIt/package.json
+++ b/PlanIt/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.4",
     "google-map-react": "^2.2.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^5.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
