--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:local": "set VITE_LOCAL=true && vite",
+    "dev:remote": "npm run dev",
+    "dev:remote:mac": "npm run dev",
+    "dev:local": "set VITE_LOCAL=true&&vite",
     "dev:local:mac": "export VITE_LOCAL=true && vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
