--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "@floating-ui/react": "^0.26.23",
     "axios": "^1.7.4",
+    "date-fns": "^3.6.0",
     "google-map-react": "^2.2.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^5.0.0",
     "react-color": "^2.19.3",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
