--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -17,6 +17,7 @@
     "@floating-ui/react": "^0.26.23",
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
+    "formik": "^2.4.6",
     "google-map-react": "^2.2.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
@@ -28,7 +29,9 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "redux": "^5.0.1",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "socket.io-client": "^4.7.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
