--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "mongodb": "^6.8.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^4.7.5"
   }
 }
